kubernetes/security/mongodb-secure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: task8
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      serviceAccountName: mongodb-sa
      automountServiceAccountToken: false

      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: mongodb
          image: mongo:7.0.12
          imagePullPolicy: IfNotPresent

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
            - name: mongodb-config
              mountPath: /data/configdb
            - name: mongodb-tmp
              mountPath: /tmp

      volumes:
        - name: mongodb-data
          emptyDir: {}
        - name: mongodb-config
          emptyDir: {}
        - name: mongodb-tmp
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: task8
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
